EPMEDUTOUR-10506[EPMEDUTOUR-11598]: UI issue: The name of the button 'Contact us' is shifted to the top when text resize 200% EPMEDUTOUR-10506[EPMEDUTOUR-11597]: Icon images for feedback from Google Play and App store are pronounced by screen reader EPMEDUTOUR-10506[EPMEDUTOUR-11599]: H3 'карманный помощник для путешествий по Беларуси" has double focus and pronounced separately when RU language is selected EPMEDUTOUR-10506[EPMEDUTOUR-11617]: ARIA attributes are not allowed for an element's role

--- a/src/assets/css/components/feedback.scss
+++ b/src/assets/css/components/feedback.scss
@@ -40,7 +40,7 @@
             margin-right: 3px;
         }
         .btn-primary {
-            display: block;
+            width: 100%;
             height: 43px;
             margin: 24px auto 0;
             padding: 0 30px;
