--- a/src/assets/css/components/stats.scss
+++ b/src/assets/css/components/stats.scss
@@ -7,6 +7,7 @@
     padding-top: 40px;
 
     h3 {
+        max-width: 90%;
         margin-bottom: 20px;
         font-size: toRem(24);
         line-height: 1.45;
@@ -46,11 +47,8 @@
         padding: 0 0 20px;
 
         h3 {
+            max-width: none;
             font-size: toRem(20);
-
-            br {
-                display: none;
-            }
         }
     }
     .c-stats__grid {
